<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAccount">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rectangle"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="1dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/backarrowbutton" />

    <TextView
        android:id="@+id/UserAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/UserAccount"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ScrollView
        android:layout_width="408dp"
        android:layout_height="668dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="1dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/Name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/name_input"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:srcCompat="@drawable/edit_icon" />

            <TextView
                android:id="@+id/name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:text="nameInput"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/Picture"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name_input" />

            <ImageButton
                android:id="@+id/edit_profile_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="15dp"
                android:background="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/input_img"
                app:layout_constraintStart_toEndOf="@+id/profile_picture"
                app:srcCompat="@drawable/edit_icon" />

            <ImageView
                android:id="@+id/input_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@+id/profile_picture"
                app:layout_constraintTop_toBottomOf="@+id/profile_picture"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/blockedingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/Ingredient"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/profile_picture"
                app:layout_constraintTop_toBottomOf="@+id/input_img" />

            <ImageButton
                android:id="@+id/add_blocked_ig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:background="#EBFFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/blocked_ing_table"
                app:layout_constraintStart_toEndOf="@+id/blockedingredients"
                app:srcCompat="@drawable/addbutton" />

            <TableLayout
                android:id="@+id/blocked_ing_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blockedingredients">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/blocked_ig3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="blocked1" />

                    <ImageButton
                        android:id="@+id/imageButton11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#EBFFFFFF"
                        app:srcCompat="@drawable/removebutton" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="blocked2" />

                    <ImageButton
                        android:id="@+id/imageButton10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#EBFFFFFF"
                        app:srcCompat="@drawable/removebutton" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/blocked_ig1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="blocked1" />

                    <ImageButton
                        android:id="@+id/imageButton11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#EBFFFFFF"
                        app:srcCompat="@drawable/removebutton" />
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/blocked_companies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/Company"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/blockedingredients"
                app:layout_constraintTop_toBottomOf="@+id/blocked_ing_table" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:background="#EDFFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/blocked_comp_table"
                app:layout_constraintStart_toEndOf="@+id/blocked_companies"
                app:srcCompat="@drawable/addbutton" />

            <TableLayout
                android:id="@+id/blocked_comp_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blocked_companies">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/comprow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="company1" />

                    <ImageButton
                        android:id="@+id/imageButton12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#EBFFFFFF"
                        app:srcCompat="@drawable/removebutton" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/comp_row2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="company2" />

                    <ImageButton
                        android:id="@+id/imageButton13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#EBFFFFFF"
                        app:srcCompat="@drawable/removebutton" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="company3" />

                    <ImageButton
                        android:id="@+id/imageButton14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#EBFFFFFF"
                        app:srcCompat="@drawable/removebutton" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="company4" />

                    <ImageButton
                        android:id="@+id/imageButton15"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="#EBFFFFFF"
                        android:contentDescription="remove_company"
                        app:srcCompat="@drawable/removebutton" />

                </TableRow>

            </TableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>